--- a/com.perscholas.poonam.physicianadvisor/src/main/resources/application.properties
+++ b/com.perscholas.poonam.physicianadvisor/src/main/resources/application.properties
@@ -7,7 +7,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
 spring.main.allow-circular-references=true
-logging.level.org.apache.http=DEBUG
-logging.level.org.springframework.web.client.RestTemplate=DEBUG
+logging.level.org.springframework=INFO
 
 
