--- a/com.perscholas.poonam.physicianadvisor/src/main/resources/application.properties
+++ b/com.perscholas.poonam.physicianadvisor/src/main/resources/application.properties
@@ -8,5 +8,6 @@ spring.jpa.show-sql=true
 spring.jpa.database=mysql
 spring.main.allow-circular-references=true
 logging.level.org.springframework=INFO
+spring.mvc.format.date=MM/dd/yyyy
 
 
